# ProjectTracker

./: .gitignore  .pre-commit-config.yaml  404.html  ProjectTracker.spec  README.md  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
api/: index.html
app/: main.py
app/domain/: logging_config.py  manager.py  models.py  storage.py
app/ui/: course_widget.py  main_window.py  new_course_dialog.py  theme.py  workbook.py
app/ui/pages/: archive.py  browse.py  current.py  overview.py
app/ui/styles/: dark.qss  light.qss  midnight.qss
docs/: api.md  index.md
search/: search_index.json
